# codle

./: .gitignore  Cargo.toml  README.md  build.sh
src/: dictionary.json  hard_dictionary.json  main.rs  models.rs  state.rs  um.py  utils.rs
web/: .gitignore  bigbrainedwordle.d  bigbrainedwordle.js  index.html  keyboard.js
